Archives, categories, tags Refactoring Wiki sample

--- a/src/SiteEngine/Pages/sample/blog/post-2.cshtml
+++ b/src/SiteEngine/Pages/sample/blog/post-2.cshtml
@@ -7,11 +7,12 @@
         author: "John Doe",
         published: "2017-04-23",
         categories: ["ipsum"],
+        tags: ["tag1","tag3"],
         excerpt: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non massa id risus sagittis scelerisque. Pellentesque scelerisque ultrices sem, eu gravida metus scelerisque sit amet. Integer consectetur dolor justo, eget vehicula risus placerat eu. Nulla ut erat sit amet magna pulvinar tempor. Phasellus tincidunt consequat erat, eget molestie ex. Vestibulum mollis nisl id nisl viverra molestie. Proin nec consectetur magna. Morbi lobortis dui leo, quis euismod nisl accumsan sed. Nullam efficitur felis tempor tortor commodo, ut blandit nisl porttitor. Nullam volutpat aliquam est, et varius mauris aliquam vitae. Integer porta massa sed urna sodales placerat."
     }
 *@
 @model Page
-First post!
+Second post!
 <code>var list = new List<Page>();</code>
 <page-link page-id="home" /><br />
 <page-link page-id="blog">To the blog</page-link>
