--- a/src/SiteEngine/Pages/Shared/_PageLayout.cshtml
+++ b/src/SiteEngine/Pages/Shared/_PageLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-    <title>@Model.Title - SiteEngine</title>
+    <title>@Model.Title - @Constants.SiteName</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -12,20 +12,21 @@
 </head>
 <body>
     <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">@Constants.SiteName</a>
+    <div class="nav-wrapper container">
+      <a href="/" class="brand-logo right">@Constants.SiteName</a>
 
         @{
             var menuPages = Site.Pages.Where(p => p.MenuPosition.HasValue).OrderBy(p => p.MenuPosition);
         }
 
-      <ul class="right hide-on-med-and-down">
+      <ul class="left hide-on-med-and-down">
         @foreach (var menuItem in menuPages)
         {
         <li><a href="@menuItem.Path">@menuItem.Title</a></li>
         }
       </ul>
 
-      <ul id="nav-mobile" class="sidenav">
+      <ul id="nav-mobile" class="left sidenav">
         @foreach (var menuItem in menuPages)
         {
         <li><a href="@menuItem.Path">@menuItem.Title</a></li>
