--- a/src/SiteEngine/Pages/koder.fi/blog-fi/post-1.cshtml
+++ b/src/SiteEngine/Pages/koder.fi/blog-fi/post-1.cshtml
@@ -22,4 +22,15 @@ var list = new List<Page>();
 <page-link page-id="home" />  
 **Link to another page with link text defined**  
 <page-link page-id="blog">To the blog</page-link>
+
+
+  <tabs>
+    <div tab-title="Tab 1">Tab 1 content</div>
+    <div tab-title="Tab 2">Tab 2 content</div>
+  </tabs>
+
+  <collapsible>
+    <div collapsible-title="Item 1" collapsible-icon="place">Item 1 content</div>
+    <div collapsible-title="Item 2">Item 2 content</div>
+  </collapsible>
 </md>
